--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Trishaxx12.github.io/SEC",
+  "homepage": "https://Trishaxx12.github.io/SEC/",
   "name": "sec",
   "private": true,
   "version": "0.0.0",
